--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "bulma": "^0.7.1",
     "history": "^4.7.2",
     "i": "^0.3.6",
+    "isbn-validate": "^1.0.3",
+    "lodash": "^4.17.10",
     "npm": "^6.3.0",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
