books list, book row and preset books

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i": "^0.3.6",
     "isbn-validate": "^1.0.3",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "npm": "^6.3.0",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
