--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-toastify": "^4.2.0"
   }
 }
