--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "npm": "^6.3.0",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
