--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "bulma": "^0.7.1",
     "history": "^4.7.2",
     "i": "^0.3.6",
-    "isbn-validate": "^1.0.3",
+    "isbn-validator": "^1.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "npm": "^6.3.0",
+    "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
     "react-datepicker": "^1.6.0",
