--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server",
-    "build": "./node_modules/.bin/webpack -p"
+    "build": "./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "sass-loader": "^7.0.3",
     "style-loader": "^0.19.0",
     "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.11.3"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
@@ -45,6 +45,7 @@
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-toastify": "^4.2.0"
+    "react-toastify": "^4.2.0",
+    "uglifyjs-webpack-plugin": "^1.3.0"
   }
 }
